update - basic logic init with basic building entity and React project init

--- a/HarmonyHomeNet-Logic/src/main/resources/application.properties
+++ b/HarmonyHomeNet-Logic/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=HarmonyHomeNet-Logic
+spring.datasource.url=jdbc:postgresql://localhost:5232/HarmonyHomeNet_DB
+spring.datasource.username=user
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.main.banner-mode=off
