--- a/HarmonyHomeNet-Logic/compose.yaml
+++ b/HarmonyHomeNet-Logic/compose.yaml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=user'
+      - 'POSTGRES_DB=HarmonyHomeNet_DB'
       - 'POSTGRES_PASSWORD=admin'
-      - 'POSTGRES_USER=HarmonyHomeNet_DB'
+      - 'POSTGRES_USER=user'
     ports:
       - '5432'
