--- a/HarmonyHomeNet-Logic/src/main/resources/application.properties
+++ b/HarmonyHomeNet-Logic/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+# application
 spring.application.name=HarmonyHomeNet-Logic
+spring.main.banner-mode=off
+
+# database properties
 spring.datasource.url=jdbc:postgresql://localhost:5232/HarmonyHomeNet_DB
 spring.datasource.username=user
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.main.banner-mode=off
+
+# for file upload and download
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
