update - basic forum added and small code refactor

--- a/HarmonyHomeNet-Logic/src/main/resources/application.properties
+++ b/HarmonyHomeNet-Logic/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # application
 spring.application.name=HarmonyHomeNet-Logic
 spring.main.banner-mode=off
+logging.level.org.springframework=TRACE
 
 # database properties
 spring.datasource.url=jdbc:postgresql://localhost:5232/HarmonyHomeNet_DB
