https configuration and README update

--- a/HarmonyHomeNet-Logic/src/main/resources/application.properties
+++ b/HarmonyHomeNet-Logic/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=HarmonyHomeNet-Logic
 spring.main.banner-mode=off
 #logging.level.org.springframework=TRACE
+spring.config.import=optional:classpath:.env
 
 # database properties
 spring.datasource.url=jdbc:postgresql://localhost:5232/HarmonyHomeNet_DB
@@ -13,3 +14,12 @@ spring.jpa.hibernate.ddl-auto=validate
 # for file upload and download
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+# SSL properties
+server.port=${SPRING_SERVER_PORT}
+server.ssl.enabled=${SPRING_SERVER_SSL_ENABLED}
+server.ssl.key-store=${SPRING_SERVER_SSL_KEY_STORE}
+server.ssl.key-store-password=${SPRING_SERVER_SSL_KEY_STORE_PASSWORD}
+server.ssl.key-store-type=${SPRING_SERVER_SSL_KEY_STORE_TYPE}
+server.ssl.key-alias=${SPRING_SERVER_SSL_KEY_ALIAS}
+server.ssl.protocol=${SPRING_SERVER_SSL_PROTOCOL}
