--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
+  docker:
+    compose:
+      file: ../compose.yaml
 
 server:
   port: 8443
