--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     generate-ddl: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -27,7 +27,7 @@ spring:
       file: ../compose.yaml
 
 server:
-  port: 8443
+  port: 8444
   ssl:
     enabled: true
     protocol: TLSv1.3
