--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,6 +27,17 @@ spring:
   docker:
     compose:
       file: ../compose.yaml
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: # your email
+    password: # your password
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 server:
   port: 8444
