--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,6 +38,12 @@ spring:
           auth: true
           starttls:
             enable: true
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          public-key: classpath:publicKey.pem
+          private-key: classpath:privateKey.pem
 
 server:
   port: 8444
