--- a/fontend/Dockerfile
+++ b/fontend/Dockerfile
@@ -1,23 +1,13 @@
-# Use the official Node.js image with the specified version as the base image
-FROM node:20.15.0-alpine
+FROM node:20-alpine
 
-# Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install -g npm@10.9.0 && npm install
+RUN npm install
 
-# Copy the rest of the application code
 COPY . .
 
-# Build the React application
-RUN npm run build
-
-# Expose the port the app runs on
 EXPOSE 3000
 
-# Start the application
-CMD ["npm", "start"]
+CMD npm run dev
