--- a/compose.yaml
+++ b/compose.yaml
@@ -2,15 +2,30 @@ version: '3.8'
 
 services:
   backend_app:
-    build: ./backend
+    build:
+      context: ./backend
     ports:
       - "8444:8443"
     depends_on:
       - db
     environment:
+      # Database
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/HarmonyHomeNet_DB
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: admin
+
+      # Mail
+      SPRING_MAIL_HOST: smtp.gmail.com
+      SPRING_MAIL_PORT: 587
+      SPRING_MAIL_USERNAME: your_email@example.com
+      SPRING_MAIL_PASSWORD: yout_password
+
+      # Super admin user details
+      SUPER_ADMIN_FIRST_NAME: Daniel
+      SUPER_ADMIN_LAST_NAME: Ryszkowski
+      SUPER_ADMIN_EMAIL: daniel.hhn.SA@gmail.com
+      SUPER_ADMIN_PASSWORD: superadmin_password123
+      SUPER_ADMIN_PHONE: 111111111
 
   db:
     image: postgres:alpine
@@ -20,3 +35,20 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: HarmonyHomeNet_DB
+
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+
+  frontend:
+    build:
+      context: ./fontend
+    image: front-app
+    ports:
+      - "3000:3000"
+    environment:
+      NODE_ENV: production
